2003-01-10  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/utils.php(util_make_links): exclude <> from
	URL regexp to avoid sucking in the <br /> tag.

	* www/include/html.php(html_image): XHTML compliance: <img> tag
	fixup

	* www/forum/include/ForumHTML.class: revert nl2br changes.

2003-01-10  Edward Ritter

	* Gargantuan patch to lower-case and bring our entire HTML
	within the realm of being XHTML-compliant. Significant refinement
	is still necessary to be 100% compliant.

2003-01-09  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/session.php(session_issecure, session_redirect):
	use $HTTP_SERVER_VARS instead of $_SERVER.
	* db/20030109.sql: new file.
	* www/include/project_summary.php: use project_sums_agg table for
	fora and forum message count.
	* www/news/news_utils.php: use forum_group_list_vw to get number
	of comments.

2003-01-9  Jim Nutt

	* www/scm/index.php Cleanup/set to use Group object.

2003-01-08  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/utils.php(util_make_links): Change e-mail
	regular expression so that e-mails must either start a line
	or be preceeded by whitespace.  This prevents URLs that
	contain e-mail addresses from getting messed up (e.g.
	http://mailman/user=foo@bar.com).

	* www/forum/include/ForumHTML.class: first call util_make_links,
	then do nl2br.  This prevents <br /> from becoming part of a URL
	that is at the end of a line.

	* www/admin/trove/trove_cat_edit.php,
	www/admin/trove/trove_cat_add.php,
	common/pm/ProjectCategory.class, www/include/bookmarks.php: Audit:
	escape special characters from user input before submitting to
	database.

2003-01-07 Tom Copeland <tom@infoether.com>

	* Added "submitted by" info to the task detail view.  Modified project_task_vw
	to include user name and realname from user table.  [tom] DB changes are in
	20030107.sql.

2003-01-06  Richard Offer

	* www/include/Layout.class, www/project/showfiles.php: patch #134: